--- a/covenant/package.json
+++ b/covenant/package.json
@@ -17,12 +17,13 @@
   },
   "homepage": "https://github.com/frontend-park-mail-ru/2019_2_Covenant#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
     "gulp-clean-css": "^4.2.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-uglify": "^3.0.2"
+    "gulp-concat": "^2.6.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
