--- a/covenant/package.json
+++ b/covenant/package.json
@@ -24,6 +24,8 @@
     "gulp-concat": "^2.6.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
