--- a/covenant/package.json
+++ b/covenant/package.json
@@ -4,6 +4,7 @@
   "description": "Covenant project",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +18,11 @@
   },
   "homepage": "https://github.com/frontend-park-mail-ru/2019_2_Covenant#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
+    "typescript": "^3.6.3",
     "del": "^5.1.0",
+    "eslint": "^6.4.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
     "gulp-clean-css": "^4.2.0",
