--- a/covenant/package.json
+++ b/covenant/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "gulp-imagemin": "^6.1.0",
     "morgan": "^1.9.1"
   }
 }
