--- a/covenant/package.json
+++ b/covenant/package.json
@@ -4,7 +4,7 @@
   "description": "Covenant project",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint ./src",
+    "lint": "./node_modules/.bin/eslint public/src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
