--- a/covenant/package.json
+++ b/covenant/package.json
@@ -29,7 +29,9 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "uuid": "^3.3.3"
   }
 }
