--- a/covenant/package.json
+++ b/covenant/package.json
@@ -20,12 +20,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
-    "typescript": "^3.6.3",
     "del": "^5.1.0",
     "eslint": "^6.4.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
-    "gulp-concat": "^2.6.1"
+    "gulp-concat": "^2.6.1",
+    "jsdoc": "^3.6.3",
+    "typescript": "^3.6.3"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
