--- a/covenant/package.json
+++ b/covenant/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "morgan": "^1.9.1",
     "uuid": "^3.3.3"
   }
