--- a/covenant-backend/package.json
+++ b/covenant-backend/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "uuid": "^3.3.3"
   }
 }
