--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint public/src",
+    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,21 +21,16 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
-    "typescript": "^3.6.3",
-    "del": "^5.1.0",
     "eslint": "^6.4.0",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.2.0",
-    "gulp-concat": "^2.6.1"
+    "typescript": "^3.6.3",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.2",
     "pug": "^2.0.4",
-    "uuid": "^3.3.3"
+    "pug-loader": "^2.4.0",
+    "ts-loader": "^6.2.0"
   }
 }
