--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Covenant project",
   "main": "index.js",
   "scripts": {
+    "start": "webpack && node server/server.js",
     "lint": "./node_modules/.bin/eslint public/src",
     "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -35,6 +36,7 @@
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "ts-loader": "^6.2.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "uuid": "^3.3.3"
   }
 }
