--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
+    "awesome-typescript-loader": "^5.2.1",
     "eslint": "^6.4.0",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.6.3",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
@@ -31,7 +31,6 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
-    "ts-loader": "^6.2.0"
+    "pug-loader": "^2.4.0"
   }
 }
