--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
     "eslint": "^6.4.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "typescript": "^3.6.3",
+    "url-loader": "^2.3.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
