--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.2.0",
     "eslint": "^6.4.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^5.0.2",
     "node-sass": "^4.13.0",
     "pug": "^2.0.4",
     "sass-loader": "^8.0.0",
