gzip nginx conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,11 @@ server {
     access_log /opt/nginx.log;
     root /opt/2019_2_Covenant_front/;
 
+    gzip            on;
+    gzip_min_length 1024;
+    gzip_proxied    expired no-cache no-store private auth;
+    gzip_types      text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
     location / {
         try_files $uri /public/index.html;
     }
