--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack && node server/server.js",
     "lint": "./node_modules/.bin/eslint public/src",
     "build": "webpack --config webpack.config.js",
+    "build-prod": "NODE_ENV=production webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
