max body size nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,11 +2,12 @@ server {
     server_name 167.172.167.87 covenant.fun;
     access_log /opt/nginx.log;
     root /opt/2019_2_Covenant_front/;
+    client_max_body_size 32m;
 
     gzip            on;
     gzip_min_length 1024;
     gzip_proxied    expired no-cache no-store private auth;
-    gzip_types      text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types      text/plain text/css application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     location / {
         try_files $uri /public/index.html;
